WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206990
[Web Animations] Changing the delay of an accelerated animation doesn't seek the animation
https://bugs.webkit.org/show_bug.cgi?id=206990
Summary
[Web Animations] Changing the delay of an accelerated animation doesn't seek ...
Antoine Quint
Reported
2020-01-30 02:53:47 PST
[Web Animations] Changing the delay of an accelerated animation doesn't seek the animation
Attachments
Patch
(11.75 KB, patch)
2020-01-30 03:10 PST
,
Antoine Quint
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-01-30 03:10:59 PST
Created
attachment 389237
[details]
Patch
Antoine Quint
Comment 2
2020-01-30 03:11:04 PST
<
rdar://problem/58675608
>
Antoine Quint
Comment 3
2020-01-30 05:48:07 PST
Committed
r255422
: <
https://trac.webkit.org/changeset/255422
>
Simon Fraser (smfr)
Comment 4
2020-01-30 10:47:53 PST
Comment on
attachment 389237
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389237&action=review
> LayoutTests/webanimations/seeking-by-changing-delay-accelerated.html:41 > + // Then wait another frame to ensure the seek was committed. > + if (window.testRunner) > + requestAnimationFrame(() => testRunner.notifyDone());
You should not need to do this. Ending the test should cause a rendering update which should update animations.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug